<resources>
    <string name="app_name">Notes</string>
    <string name="first_note">First Note</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="add_note">Add Note</string>
    <string name="deleteMsg">Deleted Successfully</string>
    <string name="Deletemsg">Delete Failed</string>
    <string name="delete">Delete</string>
    <string name="msg">Are You Sure?</string>
    <string name="addMsg">Add Successfully</string>
    <string name="emptyDetails">Please Enter Details Of Note</string>
    <string name="s">Operation Send Failed</string>
    <string name="updateMsg">Your Updated Successfully</string>
    <string name="readMSG">Operation Read Failed</string>
    <string name="delete_note">Delete Note</string>
    <string name="update_note">Update Note</string>
    <string name="notConnection">Not Internet Connection</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="MassageEmpty">Please Enter Your Details!</string>
    <string name="massageVerify">Please Verify Your Account...</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_here">Register Here..</string>
    <string name="sign_up">Sign Up</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="we_just_need_your_registered_email_address_to_send_you_password_reset">We just need Your registered email address to send you password reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="resetEmptyMsg">Please Enter Your Email Address</string>
    <string name="resetEmailMsgSuccess">Send Reset Email Successfully Please Check Your Email</string>
    <string name="resetEmailMsgFail">Send Reset Email failure Please Check Your Email</string>
    <string name="text_help">This application is a notes application that you can create an account on and use it as well as a user with real time database firebase. You can add, delete and update a note. You can also log in more than one account.
        Each account has its own information on it and also supports the reset password</string>
    <string name="ok">Ok</string>
    <string name="change_language">Change Language</string>
    <string name="changedArabic">The Language has been changed Arabic</string>
    <string name="changedEnglish">\"The Language has been changed to English \"</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="selectLangauge">Please Select The Language</string>
</resources>