<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000028"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">
    <RelativeLayout
        android:background="#000028"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:id="@+id/img"
        android:src="@drawable/l"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:textSize="@dimen/_17ssp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/forgot_password"
        android:textColor="#F0F0F0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/tv"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:textSize="@dimen/_14ssp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/we_just_need_your_registered_email_address_to_send_you_password_reset"
        android:textColor="#747493"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/tv1"/>
    <EditText
        android:inputType="textEmailAddress"
        android:textDirection="ltr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/enter_email"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="#F0F0F0"
        android:textColorHint="#F0F0F0"
        android:background="@drawable/border"
        android:id="@+id/resetEmail"/>
    <Button
        android:gravity="center"
        android:background="#000080"
        android:textColor="#F0F0F0"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:paddingEnd="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        android:text="@string/reset_password"
        android:id="@+id/btn_resetPass"
        android:layout_below="@+id/resetEmail"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_resetPass"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/don_t_have_an_account"
        android:textColor="#747493"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/tv2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2"
        android:textColor="#F0F0F0"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_16ssp"
        android:text="@string/register_here"
        android:gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_3sdp"
        android:id="@+id/goToReg"/>

    </RelativeLayout>
</ScrollView>