<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_20sdp"
    android:padding="@dimen/_5sdp"
    android:background="@drawable/note_shape_background"
    android:layout_height="wrap_content">
    <RadioGroup
        android:layout_width="wrap_content"
        android:id="@+id/RG_language"
        android:background="@drawable/border"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_English"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/_18sdp"
            android:textColor="#F0F0F0"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/english"
            />
        <RadioButton
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_Arabic"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/_18sdp"
            android:textColor="#F0F0F0"
            android:text="@string/arabic"
            />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F0F0F0"
        android:textSize="@dimen/_18ssp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/change_language"
        android:layout_below="@id/RG_language"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/border"
        android:id="@+id/btnOkLanguage"/>
</RelativeLayout>