<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/note_shape_background"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/sign_in_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_height="wrap_content"
        android:id="@+id/signInLogo"
        />
        <EditText
            android:inputType="textEmailAddress"
            android:textDirection="ltr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signInLogo"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/enter_email"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="#F0F0F0"
            android:textColorHint="#F0F0F0"
            android:background="@drawable/border"
            android:id="@+id/signInEmail"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/r"
            android:layout_below="@id/signInEmail">
            <EditText
                android:textDirection="ltr"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:padding="@dimen/_5sdp"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/enter_password"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="#F0F0F0"
                android:textColorHint="#F0F0F0"
                android:background="@drawable/border"
                android:id="@+id/signInPassword"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_hide_pass"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:id="@+id/showOrhidePasswordIn"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:textColor="#F0F0F0"
            android:layout_below="@id/r"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:padding="@dimen/_2sdp"
            android:id="@+id/ForgotPass"/>
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/r"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_3sdp"
            android:padding="@dimen/_1sdp"
            android:id="@+id/progress"
            android:visibility="gone"
            />
        <Button
            android:gravity="center"
            android:background="@drawable/btn_background_selector"
            android:textColor="#F0F0F0"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_18ssp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:id="@+id/signIn"
            android:layout_below="@+id/ForgotPass"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signIn"
            android:textColor="#5264CA"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            android:text="@string/register_here"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            android:id="@+id/reg_signIn"/>
    </RelativeLayout>
</ScrollView>