<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#001828"
    android:padding="@dimen/_5sdp"
    tools:context=".DialogAddNote">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_3sdp"
        android:textStyle="bold"
        android:maxLength="22"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:textSize="@dimen/_16ssp"
        android:textAllCaps="false"
        android:hint="@string/enter_title"
        android:textColorHint="#001828"
        android:inputType="text"
        android:id="@+id/et_title"
        android:background="#F0F0F0"
        android:layout_alignParentStart="true"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/counter"
                android:textColor="#F0F0F0"
                android:layout_below="@id/et_title"
                android:layout_alignParentEnd="true"
                android:text="0/22"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_10ssp"/>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_below="@id/counter"
        android:background="#F0F0F0"
        android:layout_marginBottom="@dimen/_36sdp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_content"
            android:textAllCaps="false"
            android:textColorHint="#001828"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:hint="@string/enter_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_38sdp"
            android:padding="@dimen/_3sdp"
            android:background="#F0F0F0"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center"
        android:layout_below="@id/scroll"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_deleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_background_selector"
            android:gravity="center"
            android:padding="@dimen/_1sdp"
            android:text="@string/delete_note"
            android:textAllCaps="false"
            android:textColor="#F0F0F0"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
        <Button
            android:padding="@dimen/_1sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/btn_background_selector"
            android:textColor="#F0F0F0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:textAllCaps="false"
            android:text="@string/update_note"
            android:id="@+id/btn_updateNote"
            />
    </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>