<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#001828"
    android:padding="@dimen/_5sdp"
    tools:context=".DialogAddNote">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="22"
        android:padding="@dimen/_3sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:textSize="@dimen/_17ssp"
        android:textAllCaps="false"
        android:hint="@string/enter_title"
        android:textColorHint="#001828"
        android:inputType="text"
        android:id="@+id/et_title"
        android:background="#F0F0F0"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/count"
        android:textColor="#F0F0F0"
        android:layout_below="@id/et_title"
        android:layout_alignParentEnd="true"
        android:text="0/22"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textAllCaps="false"
        android:textSize="@dimen/_10ssp"/>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/count"
        android:background="#F0F0F0"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_content"
            android:textAllCaps="false"
            android:paddingStart="@dimen/_1sdp"
            android:paddingEnd="@dimen/_1sdp"
            android:paddingTop="@dimen/_2sdp"
            android:textColorHint="#001828"
            android:textStyle="bold"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_15ssp"
            android:hint="@string/enter_content"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_150sdp"
            android:background="#F0F0F0"/>
    </ScrollView>
    <Button
        android:gravity="center"
        android:background="@drawable/btn_background_selector"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="#F0F0F0"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asset"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        android:textAllCaps="false"
        android:text="@string/add_note"
        android:id="@+id/btn_addNote"
        android:layout_below="@+id/scroll"
        />
</RelativeLayout>
</ScrollView>
