<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/note_shape_background"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<ImageView
    android:layout_width="wrap_content"
    android:src="@drawable/sign_up_logo"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_40sdp"
    android:layout_height="wrap_content"
    android:id="@+id/signUpLogo"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpLogo"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:padding="@dimen/_5sdp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/enter_email"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:textDirection="ltr"
        android:textColor="#F0F0F0"
        android:textColorHint="#F0F0F0"
        android:background="@drawable/border"
        android:id="@+id/signUPEmail"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/r"
            android:layout_below="@id/signUPEmail">
        <EditText
            android:textDirection="ltr"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/enter_password"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="#F0F0F0"
            android:textColorHint="#F0F0F0"
            android:background="@drawable/border"
            android:id="@+id/signUPPassword"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_hide_pass"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:id="@+id/showOrhidePassword"/>
        </RelativeLayout>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/r"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_3sdp"
            android:padding="@dimen/_1sdp"
            android:id="@+id/progress"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@drawable/btn_background_selector"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#F0F0F0"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>